--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -47,4 +47,41 @@ body {
     height: 20px;
     margin-left: 5px;
     text-align: center;
+} */
+
+
+.link {
+    font-weight: 600;
+    color: #fff;
+    text-decoration: none;
+    margin-left: 10px;
+}
+
+.Play {
+    margin-top: 40px;
+    padding: 40px;
+}
+
+.Nav {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 10px;
+
+}
+
+.counter {
+    display: flex;
+    border-radius: 80px;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    background-color: aquamarine;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.btn1:hover {
+    color: aqua;
+
 }
